Lots of bugs!!! Sorted out most bt still issues with saved bookmarks

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>Marker</title>
 </head>
 <body>
-    <h1 id="show-modal" class="center">Add Bookmark</h1>
-    <div class="container" id="bookmark-container"></div>
+    <h1 id="show-modal" >Add Bookmark</h1>
+    <div class="container" id="bookmarks-container"></div>
     <div class="modal-container" id="modal">
         <div class="modal">
             <i class="fas fa-times close-icon" id="close-modal"></i>
@@ -34,6 +34,6 @@
         </div>
     </div>
     
-    <!-- <script src="script.js"></script> -->
+    <script src="script.js"></script>
 </body>
 </html>
